force-app/main/default/objects/SurveyResponse__c/fields/CookieId__c.field-meta.xml
<CustomField>
    <fullName>CookieId__c</fullName>
    <label>CookieId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>