force-app/main/default/objects/SurveyResponse__c/fields/GuestId__c.field-meta.xml
<CustomField>
    <fullName>GuestId__c</fullName>
    <label>GuestId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>