force-app/main/default/objects/SurveyResponse__c/fields/MessagingSessionId__c.field-meta.xml
<CustomField>
    <fullName>MessagingSessionId__c</fullName>
    <label>MessagingSessionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>