force-app/main/default/objects/SurveyResponse__c/fields/New_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>New_CreatedDate__c</fullName>
    <formula>IF(
    CreatedDate &gt;= (NOW() - 1/24),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New CreatedDate</label>
    <type>Checkbox</type>
</CustomField>