force-app/main/default/objects/SurveyResponse__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <type>TextArea</type>
</CustomField>